
syntax = "proto3";

package com.inferno.protos;

option java_outer_classname = "SharedEnums";


enum RequestType
{
    REQUEST_NONE = 0;
    STARTUP = 1;
    CREATE_NEW_USER = 2;
    LOAD_STRUCTURES = 3;
    IN_APP_PURCHASE = 4;
}

enum ResponseType
{
    RESPONSE_NONE = 0;
    STARTUP_RESPONSE = 1;
    CREATE_NEW_USER_RESPONSE = 2;
    LOAD_STRUCTURES_RESPONSE = 3;
    IN_APP_PURCHASE_RESPONSE = 4;
}

enum ResponseStatus
{
    RESPONSE_STATUS_NONE = 0;
    SUCCESS = 1;
    FAIL = 2;
    USER_EXIST = 3;
}