
syntax = "proto3";

import "SharedEnums.proto";

package com.inferno.protos;

option java_outer_classname = "UserProtos";

message User
{
  string id = 1;
  string name = 2;
  string fb_id = 3;
  string udid = 4;
}

message UserCreate
{
  string id = 1;
  string name = 2;
  string fb_id = 3;
  string udid = 4;
}

message CreateUserResponseProto
{
   string messege = 1;
   ResponseStatus status = 2;
   bytes payload = 3;
}
